--- a/HOME/Tpl/Index/index_main.html
+++ b/HOME/Tpl/Index/index_main.html
@@ -4,14 +4,18 @@
 	描述：主页面，拼接header，动态变换<main>内容，由index_main.js控制
 -->
 <!-- 加载头文件 -->
+ <?php
+   session_start();
+   $_SESSION['uid']=$user_id;
+?> 
 <include file="Public:header" />
 <main  class="index_main"> 
 <article class='larg'>
 </article>
 </main>
-    
+  
 </body>
 
-<!-- 自定义 游客访问  操作 Javascript 文件 -->
-<script src="__JS__/user_custom.js"></script>
+<!-- 自定义 游客访问  操作 Javascript 文件
+<script src="__JS__/user_custom.js"></script> -->
 </html>
