--- a/HOME/Tpl/Public/header.html
+++ b/HOME/Tpl/Public/header.html
@@ -12,10 +12,16 @@
     var APP = "__APP__";
 	var IMG = "__IMG__";	
 </script>
+<!-- Bootstrap & Snippet plugin core CSS-->
+<link href="http://cdn.bootcss.com/twitter-bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
+<!-- Custom styles for this template -->
+<link href="http://www.bootcss.com/p/stickup/stickup.css" rel="stylesheet">
+<link rel="image_src" href="http://lirancohen.github.io/stickUp/images/stickUp.png">
+<link href="__CSS__/index_image_style.css" rel="stylesheet">
 
 <!-- 新 jquery Javascript 文件 --> 
 <script type="text/javascript" src='http://code.jquery.com/jquery-2.1.1.js'></script>
-
+<script type="text/javascript" src='__JS__/week_jquery.js'></script>
 <!-- 新 Bootstrap 核心 CSS 文件 -->
 <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
@@ -28,9 +34,6 @@
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-<!-- 自定义  首页课程表 CSS 文件 -->
-<link rel="stylesheet" href="__CSS__/main_table.css" media="screen" type="text/css" />
-
 <!-- jquery-ui  CSS 文件 -->
 <link rel="stylesheet" href="__CSS__/jquery-ui.css" media="screen" type="text/css" />
 
@@ -42,45 +45,6 @@
 
 <!-- 主页 框架  CSS 文件 -->
 <link rel="stylesheet" href="__CSS__/index_main.css" media="screen" type="text/css" />
-
-<!-- 时间  Javascript 文件 -->
-<script type="text/javascript" src="__JS__/time.js"></script>
-
-<!-- 用户信息  Javascript 文件 -->
-<script type="text/javascript" src="__JS__/user_info.js"></script>
-
-
-<!-- 自定义 左侧 导航栏 跳转 Javascript 文件 -->
-<script>
-$(document).ready( function() {
-	$(".index_main").load(APP+"/Index/main");
-	$("#index").click(function(){
-		$(".index_main").load(APP+"/Index/main");
-	});			
-	$("#syllabus").click(function(){
-		$(".index_main").load(APP+"/Table/index");
-	});
-	$("#note").click(function(){
-		$(".index_main").load(APP+"/Note/index");
-	});
-	
-    $('body').on("click", ".larg div h3", function(){
-    if ($(this).children('span').hasClass('close')) {
-      $(this).children('span').removeClass('close');
-    }
-    else {
-      $(this).children('span').addClass('close');
-    }
-    /*$(this).parent().children('p').slideToggle(250);*/
-  });
-  
-  $('body').on("click", "nav ul li a", function(){
-    var title = $(this).data('title');
-    $('.title').children('h2').html(title);
-  });
-});
-
-</script>
 
 </head>
 <!-- url后面随机值，保证页面最新 -->
@@ -116,3 +80,43 @@ oncopy="return false;"
   </nav>
    
 </header>
+
+<!-- 用户信息  Javascript 文件 -->
+<script type="text/javascript" src="__JS__/user_info.js"></script>
+
+<!-- 时间  Javascript 文件 -->
+<script type="text/javascript" src="__JS__/time.js"></script>
+
+
+
+<!-- 自定义 左侧 导航栏 跳转 Javascript 文件 -->
+<script>
+$(document).ready( function() {
+	$(".index_main").load(APP+"/Index/main");
+	$("#index").click(function(){
+		$(".index_main").load(APP+"/Index/main");
+	});			
+	$("#syllabus").click(function(){
+		$(".index_main").load(APP+"/Table/index");
+	});
+	$("#note").click(function(){
+		$(".index_main").load(APP+"/Note/index");
+	});
+	
+    $('body').on("click", ".larg div h3", function(){
+    if ($(this).children('span').hasClass('close')) {
+      $(this).children('span').removeClass('close');
+    }
+    else {
+      $(this).children('span').addClass('close');
+    }
+    /*$(this).parent().children('p').slideToggle(250);*/
+  });
+  
+  $('body').on("click", "nav ul li a", function(){
+    var title = $(this).data('title');
+    $('.title').children('h2').html(title);
+  });
+});
+
+</script>
