--- a/HOME/Tpl/Note/index.html
+++ b/HOME/Tpl/Note/index.html
@@ -12,50 +12,48 @@
 
 
 	  <div class='title'>
-    <h2>首页</h2>
+    <h2>课程笔记</h2>
      <include file="Public:top" />
   </div>
 <article class='larg'>
-<div class="panel-group" id="accordion">
-  <div class="panel panel-primary">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                                         本周笔记
-        </a>
-      </h4>
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <img class="navbar-brand" src="__IMG__/logo2.png" alt="爱拍课堂" width="80px"></img>
     </div>
-    <div id="collapseTwo" class="panel-collapse collapse">
-      <div class="panel-body">
-                           本周笔记  
-<ul class="media-list">
-  <li class="media">
-    <a class="pull-left" href="#">
-       <img style="width: 64px; height: 64px;" class="media-object" src="http://d.hiphotos.baidu.com/image/pic/item/f636afc379310a55d8c966fab54543a9832610ca.jpg" alt="...">
-    </a>
-    <div class="media-body">
-      <h4 class="media-heading">数据库原理</h4>
-        <h5 class="media-heading">第一章</h5>
-               标签：Sql
-    </div>
-  </li>
-</ul>
-      </div>
-    </div>
-  </div>
-  <div class="panel panel-primary">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                            推荐笔记
-        </a>
-      </h4>
-    </div>
-    <div id="collapseThree" class="panel-collapse collapse">
-      <div class="panel-body">
-             推荐笔记      
-      </div>
-    </div>
-  </div>
-</div>
-</article>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default" style="margin-top:0px;">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+      	<li><a href="#">添加笔记</a></li>
+        <li><a href="#">修改笔记</a></li>
+        
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">其他<span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">标记</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav></article>
