--- a/HOME/Tpl/Public/header.html
+++ b/HOME/Tpl/Public/header.html
@@ -12,42 +12,79 @@
     var APP = "__APP__";
 	var IMG = "__IMG__";	
 </script>
+<!-- Bootstrap & Snippet plugin core CSS-->
 
+<link href="__CSS__/index_image_style.css" rel="stylesheet">
+<link href="__CSS__/table.css">
 <!-- 新 jquery Javascript 文件 --> 
-<script type="text/javascript" src='http://code.jquery.com/jquery-2.1.1.js'></script>
-
+<script type="text/javascript" src='__JS__/jquery-2.1.1.js'></script>
+<script type="text/javascript" src='__JS__/week_jquery.js'></script>
 <!-- 新 Bootstrap 核心 CSS 文件 -->
-<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="__CSS__/bootstrap.min.css">
 
-<!-- 可选的Bootstrap主题文件（一般不用引入） -->
-<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<!-- 可选的Bootstrap主题文件（一般不用引入） 
+<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">-->
 
 <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
 <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
-<!-- 自定义  首页课程表 CSS 文件 -->
-<link rel="stylesheet" href="__CSS__/main_table.css" media="screen" type="text/css" />
+<script src="__JS__/bootstrap.min.js"></script>
 
 <!-- jquery-ui  CSS 文件 -->
 <link rel="stylesheet" href="__CSS__/jquery-ui.css" media="screen" type="text/css" />
 
 <!--font-awesome  标准文字库  CSS 文件 -->
-<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.css">
+<link rel="stylesheet" href="__CSS__/font-awesome.css">
 
 <!--bootstrap  再编辑   CSS 文件 -->
 <link rel="stylesheet" href="__CSS__/bootstrap.css" media="screen" type="text/css"/>
-
 <!-- 主页 框架  CSS 文件 -->
 <link rel="stylesheet" href="__CSS__/index_main.css" media="screen" type="text/css" />
+<!-- 首页 CSS-->
+<link href="__CSS__/main_table.css">
+</head>
+<!-- url后面随机值，保证页面最新 -->
+<body
+ondragstart="return false;" 
+onpaste="return false;" 
+oncut="return false;"  
+oncopy="return false;" 
+onload=""
+>
+
+<span class='bckg'></span>
+<header>
+	
+  <h1>
+  		<img src="__IMG__/logo2.png" id="logo" alt="爱拍课堂" width="87px"/>
+  </h1>
+  <nav>
+    <ul>
+     <li>
+        <a data-title='首页' id="index">首页</a>
+      </li>
+      <li>
+        <a data-title='课程表' id="syllabus">课程表</a>
+      </li>
+      <li>
+        <a data-title='课堂笔记' id="note">课堂笔记</a>
+      </li>
+      <li>
+        <a data-title='我的资料' id="information">我的资料</a>
+      </li>      
+    </ul>
+     
+  </nav>
+   
+</header>
+
+<!-- 用户信息  Javascript 文件 -->
+<script type="text/javascript" src="__JS__/user_info.js"></script>
 
 <!-- 时间  Javascript 文件 -->
 <script type="text/javascript" src="__JS__/time.js"></script>
 
-<!-- 用户信息  Javascript 文件 -->
-<script type="text/javascript" src="__JS__/user_info.js"></script>
 
 
 <!-- 自定义 左侧 导航栏 跳转 Javascript 文件 -->
@@ -81,38 +118,3 @@ $(document).ready( function() {
 });
 
 </script>
-
-</head>
-<!-- url后面随机值，保证页面最新 -->
-<body
-ondragstart="return false;" 
-onpaste="return false;" 
-oncut="return false;"  
-oncopy="return false;" 
->
-
-<span class='bckg'></span>
-<header>
-	
-  <h1>
-  		<img src="__IMG__/logo2.png" id="logo" alt="爱拍课堂" width="87px"/>
-  </h1>
-  <nav>
-    <ul>
-     <li>
-        <a data-title='首页' id="index">首页</a>
-      </li>
-      <li>
-        <a data-title='课程表' id="syllabus">课程表</a>
-      </li>
-      <li>
-        <a data-title='课堂笔记' id="note">课堂笔记</a>
-      </li>
-      <li>
-        <a data-title='我的资料' id="information">我的资料</a>
-      </li>      
-    </ul>
-     
-  </nav>
-   
-</header>
