--- a/HOME/Tpl/Public/header.html
+++ b/HOME/Tpl/Public/header.html
@@ -13,39 +13,36 @@
 	var IMG = "__IMG__";	
 </script>
 <!-- Bootstrap & Snippet plugin core CSS-->
-<link href="http://cdn.bootcss.com/twitter-bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
-<!-- Custom styles for this template -->
-<link href="http://www.bootcss.com/p/stickup/stickup.css" rel="stylesheet">
-<link rel="image_src" href="http://lirancohen.github.io/stickUp/images/stickUp.png">
-<link href="__CSS__/index_image_style.css" rel="stylesheet">
 
+<link href="__CSS__/index_image_style.css" rel="stylesheet">
+<link href="__CSS__/table.css">
 <!-- 新 jquery Javascript 文件 --> 
-<script type="text/javascript" src='http://code.jquery.com/jquery-2.1.1.js'></script>
+<script type="text/javascript" src='__JS__/jquery-2.1.1.js'></script>
 <script type="text/javascript" src='__JS__/week_jquery.js'></script>
 <!-- 新 Bootstrap 核心 CSS 文件 -->
-<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="__CSS__/bootstrap.min.css">
 
-<!-- 可选的Bootstrap主题文件（一般不用引入） -->
-<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<!-- 可选的Bootstrap主题文件（一般不用引入） 
+<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">-->
 
 <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
 <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="__JS__/bootstrap.min.js"></script>
 
 <!-- jquery-ui  CSS 文件 -->
 <link rel="stylesheet" href="__CSS__/jquery-ui.css" media="screen" type="text/css" />
 
 <!--font-awesome  标准文字库  CSS 文件 -->
-<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.css">
+<link rel="stylesheet" href="__CSS__/font-awesome.css">
 
 <!--bootstrap  再编辑   CSS 文件 -->
 <link rel="stylesheet" href="__CSS__/bootstrap.css" media="screen" type="text/css"/>
-
 <!-- 主页 框架  CSS 文件 -->
 <link rel="stylesheet" href="__CSS__/index_main.css" media="screen" type="text/css" />
-
+<!-- 首页 CSS-->
+<link href="__CSS__/main_table.css">
 </head>
 <!-- url后面随机值，保证页面最新 -->
 <body
@@ -53,6 +50,7 @@ ondragstart="return false;"
 onpaste="return false;" 
 oncut="return false;"  
 oncopy="return false;" 
+onload=""
 >
 
 <span class='bckg'></span>
@@ -64,16 +62,16 @@ oncopy="return false;"
   <nav>
     <ul>
      <li>
-        <a data-title='首页' id="index">首页</a>
+        <span class="glyphicon glyphicon-home"  data-title='首页' id="index">&nbsp;&nbsp;首页</span>
       </li>
       <li>
-        <a data-title='课程表' id="syllabus">课程表</a>
+        <span data-title='课程表' id="syllabus" class="glyphicon glyphicon-calendar">&nbsp;&nbsp;课程表</span>
       </li>
       <li>
-        <a data-title='课堂笔记' id="note">课堂笔记</a>
+        <span data-title='课堂笔记' id="note" class="glyphicon glyphicon-book">&nbsp;&nbsp;课堂笔记</span>
       </li>
       <li>
-        <a data-title='我的资料' id="information">我的资料</a>
+        <span data-title='我的资料' id="information" class="glyphicon glyphicon-star">&nbsp;&nbsp;我的资料</span>
       </li>      
     </ul>
      
