--- a/HOME/Tpl/Public/header.html
+++ b/HOME/Tpl/Public/header.html
@@ -62,16 +62,16 @@ onload=""
   <nav>
     <ul>
      <li>
-        <a data-title='首页' id="index">首页</a>
+        <span class="glyphicon glyphicon-home"  data-title='首页' id="index">&nbsp;&nbsp;首页</span>
       </li>
       <li>
-        <a data-title='课程表' id="syllabus">课程表</a>
+        <span data-title='课程表' id="syllabus" class="glyphicon glyphicon-calendar">&nbsp;&nbsp;课程表</span>
       </li>
       <li>
-        <a data-title='课堂笔记' id="note">课堂笔记</a>
+        <span data-title='课堂笔记' id="note" class="glyphicon glyphicon-book">&nbsp;&nbsp;课堂笔记</span>
       </li>
       <li>
-        <a data-title='我的资料' id="information">我的资料</a>
+        <span data-title='我的资料' id="information" class="glyphicon glyphicon-star">&nbsp;&nbsp;我的资料</span>
       </li>      
     </ul>
      
@@ -81,9 +81,6 @@ onload=""
 
 <!-- 用户信息  Javascript 文件 -->
 <script type="text/javascript" src="__JS__/user_info.js"></script>
-
-<!-- 时间  Javascript 文件 -->
-<script type="text/javascript" src="__JS__/time.js"></script>
 
 
 
