--- a/HOME/Tpl/Public/top.html
+++ b/HOME/Tpl/Public/top.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="__CSS__/index_top.css"/>
 
 
-<a href="#" title="<?php session_start(); echo $_SESSION['uid'];?>" id="user_login_name">
+<a href="#" title="<?php session_start(); echo $_SESSION['uid'];?>" id="user_login_name" class="glyphicon glyphicon-user" style="font-size: 18px;">
 <!-- 假如 session不存在或设置的值为空，即没有登录，显示登录和注册button-->
 
 <!-- session 存在，即登录成功就显示用户名 -->
