--- a/HOME/Tpl/Index/index_main.html
+++ b/HOME/Tpl/Index/index_main.html
@@ -8,6 +8,31 @@
    session_start();
    $_SESSION['uid']=$user_id;
 ?> 
+<!--[if lt IE9]>
+<script>
+(function() {
+if (!
+/*@cc_on!@*/
+0) return;
+var e = "abbr, article, aside, audio, canvas, datalist, details, dialog, eventsource, figure, footer, header, hgroup, mark, menu, meter, nav, output, progress, section, time, video".split(', ');
+var i= e.length;
+while (i--){
+document.createElement(e[i])
+}
+})()
+</script>
+<![endif]-->
+<!--[if lte IE 8]>
+<noscript>
+<style>.html5-wrappers{display:none!important;}</style>
+<div class="ie-noscript-warning">您的浏览器禁用了脚本，请<a href="">查看这里</a>来启用脚本!或者<a href="/?noscript=1">继续访问</a>.
+</div>
+</noscript>
+<![endif]-->
+<style>
+/*html5*/
+article,aside,dialog,footer,header,section,footer,nav,figure,menu{display:block}
+</style>
 <include file="Public:header" />
 <main  class="index_main"> 
 <article class='larg'>
@@ -15,7 +40,6 @@
 </main>
   
 </body>
-
 <!-- 自定义 游客访问  操作 Javascript 文件
 <script src="__JS__/user_custom.js"></script> -->
 </html>
