--- a/HOME/Tpl/Note/index.html
+++ b/HOME/Tpl/Note/index.html
@@ -1,14 +1,12 @@
 <!--
 	作者：范志俊
 	时间：2014-07-25
-         描述：首页页面，包括显示本周课程表，和本周笔记，以及推荐笔记
+         描述：笔记页面
 -->
 <script>
     var APP = "__APP__";
 	var IMG = "__IMG__";
 </script>
-<!-- 自定义 table 操作 Javascript 文件 -->
-<script src="__JS__/main_table.js"> </script>
 
 
 	  <div class='title'>
@@ -35,7 +33,7 @@
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default" style="margin-top:0px;">Submit</button>
+        <button type="submit" class="btn btn-default" style="margin-top:0px;">Serach</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
       	<li><a href="#">添加笔记</a></li>
