--- a/HOME/Tpl/Index/index_main.html
+++ b/HOME/Tpl/Index/index_main.html
@@ -4,45 +4,61 @@
 	描述：主页面，拼接header，动态变换<main>内容，由index_main.js控制
 -->
 <!-- 加载头文件 -->
- <?php
-   session_start();
-   $_SESSION['uid']=$user_id;
-?> 
-<<<<<<< HEAD
-<!--[if lt IE9]>
-<script>
-(function() {
-if (!
-/*@cc_on!@*/
-0) return;
-var e = "abbr, article, aside, audio, canvas, datalist, details, dialog, eventsource, figure, footer, header, hgroup, mark, menu, meter, nav, output, progress, section, time, video".split(', ');
-var i= e.length;
-while (i--){
-document.createElement(e[i])
+<include file="Public:session" />
+<!--[if lt IE 9]>
+<script type="text/javascript">
+var e=("abbr,article,aside,audio,canvas,datalist,details,"+
+"figure,footer,header,hgroup,mark,menu,meter,nav,output,"+
+"progress,section,time,video").split(',');
+for(var i=0;i<e .length;i++){
+document.createElement(e[i]);
 }
-})()
+alert("我们感到很抱歉，无法在你的浏览器上，呈现我们的页面，请切换浏览器，谢谢！");
 </script>
-<![endif]-->
-<!--[if lte IE 8]>
+<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <noscript>
 <style>.html5-wrappers{display:none!important;}</style>
-<div class="ie-noscript-warning">您的浏览器禁用了脚本，请<a href="">查看这里</a>来启用脚本!或者<a href="/?noscript=1">继续访问</a>.
+<div class="ie-noscript-warning">您的浏览器禁用了脚本，请<a href="">查看帮助</a>来启用脚本!或者<a href="/?noscript=1">继续访问</a>.
 </div>
 </noscript>
-<![endif]-->
 <style>
 /*html5*/
 article,aside,dialog,footer,header,section,footer,nav,figure,menu{display:block}
 </style>
-=======
->>>>>>> origin/master
+< ![endif]--> 
+<!--[if lte IE 8]>  
+	<style>
+/*html5*/
+article,aside,dialog,footer,header,section,footer,nav,figure,menu{display:block}
+</style>
+<script type="text/javascript">  
+(function(){  
+   var html5elmeents = "address|article|aside|audio|canvas|command|datalist|details|dialog|figure|figcaption|footer|header|hgroup|keygen|mark|meter|menu|nav|progress|ruby|section|time|video".split('|');  
+   for(var i = 0; i < html5elmeents.length; i++){  
+      document.createElement(html5elmeents[i]);  
+  }  
+})();  
+</script>  
+<noscript>
+<style>.html5-wrappers{display:none!important;}</style>
+<div class="ie-noscript-warning">您的浏览器禁用了脚本，请<a href="">查看帮助</a>来启用脚本!或者<a href="/?noscript=1">继续访问</a>.
+</div>
+</noscript>
+<![endif]-->
+<!--[if IE]>
+<script> 
+var APP="__APP__";
+alert('很抱歉，我们不能在你的浏览器上展现我们美丽动人的网页，请切换浏览器，谢谢！~');
+location.href=APP+'/Public/404'; 
+</script>
+<![endif]-->
 <include file="Public:header" />
+<!--[if !IE]><!--> 
+
+<!--<![endif]-->
 <main  class="index_main"> 
 <article class='larg'>
 </article>
 </main>
-  
 </body>
-<!-- 自定义 游客访问  操作 Javascript 文件
-<script src="__JS__/user_custom.js"></script> -->
 </html>
