--- a/HOME/Tpl/Note/index.html
+++ b/HOME/Tpl/Note/index.html
@@ -14,6 +14,7 @@
      <include file="Public:top" />
   </div>
 <article class='larg'>
+		<include file="Public:session" />
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -33,11 +34,7 @@
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
-<<<<<<< HEAD
         <button type="submit" class="btn btn-default" style="margin-top:0px;">Serach</button>
-=======
-        <button type="submit" class="btn btn-default" style="margin-top:0px;">Submit</button>
->>>>>>> origin/master
       </form>
       <ul class="nav navbar-nav navbar-right">
       	<li><a href="#">添加笔记</a></li>
