--- a/HOME/Tpl/Index/main.html
+++ b/HOME/Tpl/Index/main.html
@@ -633,8 +633,8 @@ sagittis lacus vel augue laoreet rutrum faucibus.">
 		cell.innerHTML = classDetail.class[i0][i1][i2].eaddress;
 		var cell = row.insertCell(0);
 		cell.innerHTML = "上课地址";
-		var x1 = parseInt(event.clientX)-80;
-		var y1 =event.clientY;
+		var x1 = parseInt(event.clientX)-130;
+		var y1 =parseInt(event.clientY)+10;
 		$("#classInfo").css("top", y1).css("left", x1);
 		classInfo1.style.display = "block";
 		//document.body.appendChild(classDiv);
