--- a/HOME/Tpl/Public/session.html
+++ b/HOME/Tpl/Public/session.html
@@ -2,4 +2,4 @@
 <input type="hidden" value="<?php echo $_SESSION['uid'];?>" id="hidden_uid">
 <input type="hidden" value="<?php echo $_SESSION['type'];?>" id="hidden_type">
 <input type="hidden" value="<?php echo $_SESSION['state'];?>" id="hidden_state">
-<input type="hidden" value="<?php echo $_SESSION['type'];?>" id="hidden_type">
+<input type="hidden" value="<?php echo $_SESSION['utype'];?>" id="hidden_type">
