--- a/HOME/Tpl/Public/session.html
+++ b/HOME/Tpl/Public/session.html
@@ -1,5 +1,5 @@
 <?php session_start();?>
-<input type="hidden" value="<?php echo $_SESSION['uid'];?>" id="hidden_uid">
-<input type="hidden" value="<?php echo $_SESSION['type'];?>" id="hidden_type">
-<input type="hidden" value="<?php echo $_SESSION['state'];?>" id="hidden_state">
-<input type="hidden" value="<?php echo $_SESSION['utype'];?>" id="hidden_type">
+<input type="hidden" value="<?php echo $_COOKIE['uid'];?>" id="hidden_uid">
+<input type="hidden" value="<?php echo $_COOKIE['type'];?>" id="hidden_type">
+<input type="hidden" value="<?php echo $_COOKIE['state'];?>" id="hidden_state">
+<input type="hidden" value="<?php echo $_COOKIE['utype'];?>" id="hidden_utype">
